qmsystem2 (1.0.16) unstable; urgency=low

  [Matias Muhonen]
  * Fixes: NB#231816 - QmUSBMode::mountStatus(DocumentDirectoryMount) always returns ReadOnlyMount

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 1 Mar 2011 12:31:45 +0200

qmsystem2 (1.0.15) unstable; urgency=low

  [Matti Halme]
  * QmBattery: Fixed a minutes/seconds conversion bug.
  * Fixes: NB#231716 - QmSystem2 uses incorrect build dependency.

  [Matias Muhonen]
  * Wrong documentation about how to use in qmake 

  [Sirpa Tahkamo]
  * Edited documentation for consistency

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 28 Feb 2011 09:09:44 +0200

qmsystem2 (1.0.14) unstable; urgency=low

  [Matti Halme]
  * Utilize the use time daemon in talk/active/idle queries.

  [Ilya Dogolazky]
  * Fixes: NB#198141 - QmTime produces unnecessary D-Bus traffic
  * Fixes: NB#201997 - QmTime::isOperatorTimeAccessible() returns false, even if NITZ usage is not disabled by customization
  * Fixes: NB#202025 - QmTime::getRemoteTime sometimes produce random results
  * Fixes: NB#202034 - QmTime::getRemoteTime is not calling tzset() after restoring empty TZ
  * Fixes: NB#203406 - there is no way to get default time zone via qmsystem library
  * Fixes: NB#204558 - QmTime is never signalling "setting only changed" (unless only the 12/24 flag is changed)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 24 Feb 2011 08:18:57 +0200

qmsystem2 (1.0.13) unstable; urgency=low

  [Matias Muhonen]
  * Fixes: NB#228033 - VolumeControl does not function in video, Audio and Call Applications.

  [Matti Halme]
  * Emit delayed charging state signal in case of USB100. Fixes: NB#228167.

 -- Matti Halme <matti.halme@nokia.com>  Tue, 22 Feb 2011 16:51:13 +0200

qmsystem2 (1.0.12) unstable; urgency=low

  [Timo Rongas]
  * Added precision to QmCompass documentation. Fixes: NB#228420.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 21 Feb 2011 09:53:07 +0200

qmsystem2 (1.0.11) unstable; urgency=low
