@@ -1,5 +1,8 @@
 qmsystem2 (1.0.16) unstable; urgency=low
 
+  [Yang Yang]
+  * Add test mount options to manual-usbmode-test
+
   [Matias Muhonen]
   * Fixes: NB#231816 - QmUSBMode::mountStatus(DocumentDirectoryMount) always returns ReadOnlyMount
 
